<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/shopping_cart"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/list"
            android:title="@string/categoriess" />
        <item
            android:id="@+id/nav_post_an_ad"
            android:icon="@drawable/seo"
            android:title="@string/post_and_add" />

        <item
            android:id="@+id/nav_all_ads"
            android:icon="@drawable/ads"
            android:title="@string/browse_ads" />

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/dashboard"
            android:title="@string/dashboard" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about_talking"
            android:title="@string/about" />

        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/contact"
            android:title="@string/contact_us" />




    </group>


</menu>
